--- a/configserver/configserver/src/main/resources/application.properties
+++ b/configserver/configserver/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.application.name=configserver
-spring.profiles.active=native
+#spring.profiles.active=native
+spring.profiles.active=git
 
 #READ CONFIG FROM CLASSPATH
 #spring.cloud.config.server.native.search.locations=classpath:/config
@@ -8,8 +9,10 @@ spring.profiles.active=native
 #spring.cloud.config.server.native.search.locations=file:///D://configLocation
 
 #READ CONFIG FROM GITHUB
-spring.cloud.config.server.git.url=https://github.com/darshanrm/springBootMicroservice-config.git
+spring.cloud.config.server.git.uri=https://github.com/darshanrm/springBootMicroservice-config.git
 spring.cloud.config.server.git.clone-on-start=true
 spring.cloud.config.server.git.default-label=main
 
 server.port=8071
+
+encrypt.key=darshan
