--- a/loans/loans/src/main/resources/application.properties
+++ b/loans/loans/src/main/resources/application.properties
@@ -8,3 +8,10 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
 server.port=8090
+
+spring.application.name=loans
+spring.profiles.active=prod
+spring.config.import=optional:configserver:http://localhost:8071/
+
+#expose refresh endpoint to fetch latest properties
+management.endpoints.web.exposure.include=*
