--- a/loans/loans/src/main/resources/application.properties
+++ b/loans/loans/src/main/resources/application.properties
@@ -15,3 +15,16 @@ spring.config.import=optional:configserver:http://localhost:8071/
 
 #expose refresh endpoint to fetch latest properties
 management.endpoints.web.exposure.include=*
+
+eureka.instance.preferIpAddress = true 
+eureka.client.registerWithEureka = true
+eureka.client.fetchRegistry = true
+eureka.client.serviceUrl.defaultZone = http://localhost:8070/eureka/
+
+## Configuring info endpoint
+info.app.name=Loans Microservice
+info.app.description=Loans Application
+info.app.version=1.0.0
+
+endpoints.shutdown.enabled=true
+management.endpoint.shutdown.enabled=true
