--- a/docker-compose/dev/docker-compose.yaml
+++ b/docker-compose/dev/docker-compose.yaml
@@ -2,6 +2,14 @@ version: "3.8"
 
 services:
 
+  zipkin:
+    image: openzipkin/zipkin
+    mem_limit: 700m
+    ports:
+      - "9411:9411"
+    networks:
+     - darshm-network
+
   configserver:
     image: darshm/bankapplication:configserver
     mem_limit: 700m
@@ -9,6 +17,8 @@ services:
       - "8071:8071"
     networks:
      - darshm-network
+    depends_on:
+      - zipkin
    
   eurekaserver:
     image: darshm/bankapplication:eurekaserver
@@ -19,6 +29,7 @@ services:
      - darshm-network
     depends_on:
       - configserver
+      - zipkin
     deploy:
       restart_policy:
         condition: on-failure
@@ -28,6 +39,7 @@ services:
     environment:
       SPRING_PROFILES_ACTIVE: dev
       SPRING_CONFIG_IMPORT: configserver:http://configserver:8071/
+      SPRING_ZIPKIN_BASEURL: http://zipkin:9411/
       
   accounts:
     image: darshm/bankapplication:accounts
@@ -39,6 +51,7 @@ services:
     depends_on:
       - configserver
       - eurekaserver
+      - zipkin
     deploy:
       restart_policy:
         condition: on-failure
@@ -49,6 +62,7 @@ services:
       SPRING_PROFILES_ACTIVE: dev
       SPRING_CONFIG_IMPORT: configserver:http://configserver:8071/
       EUREKA_CLIENT_SERVICEURL_DEFAULTZONE: http://eurekaserver:8070/eureka/
+      SPRING_ZIPKIN_BASEURL: http://zipkin:9411/
   
   loans:
     image: darshm/bankapplication:loans
@@ -58,8 +72,10 @@ services:
     networks:
       - darshm-network
     depends_on:
+      - zipkin
       - configserver
       - eurekaserver
+      - accounts
     deploy:
       restart_policy:
         condition: on-failure
@@ -70,6 +86,7 @@ services:
       SPRING_PROFILES_ACTIVE: dev
       SPRING_CONFIG_IMPORT: configserver:http://configserver:8071/
       EUREKA_CLIENT_SERVICEURL_DEFAULTZONE: http://eurekaserver:8070/eureka/
+      SPRING_ZIPKIN_BASEURL: http://zipkin:9411/
     
   cards:
     image: darshm/bankapplication:cards
@@ -79,8 +96,11 @@ services:
     networks:
       - darshm-network
     depends_on:
+      - zipkin
       - configserver
       - eurekaserver
+      - accounts
+      - loans
     deploy:
       restart_policy:
         condition: on-failure
@@ -91,6 +111,7 @@ services:
       SPRING_PROFILES_ACTIVE: dev
       SPRING_CONFIG_IMPORT: configserver:http://configserver:8071/
       EUREKA_CLIENT_SERVICEURL_DEFAULTZONE: http://eurekaserver:8070/eureka/
+      SPRING_ZIPKIN_BASEURL: http://zipkin:9411/
    
   gatewayserver:
     image: darshm/bankapplication:gatewayserver
@@ -100,6 +121,7 @@ services:
     networks:
       - darshm-network
     depends_on:
+      - zipkin
       - configserver
       - eurekaserver
       - cards
@@ -115,6 +137,7 @@ services:
       SPRING_PROFILES_ACTIVE: dev
       SPRING_CONFIG_IMPORT: configserver:http://configserver:8071/
       EUREKA_CLIENT_SERVICEURL_DEFAULTZONE: http://eurekaserver:8070/eureka/
+      SPRING_ZIPKIN_BASEURL: http://zipkin:9411/
       
 networks:
   darshm-network:
