--- a/cards/cards/src/main/resources/application.properties
+++ b/cards/cards/src/main/resources/application.properties
@@ -28,3 +28,14 @@ info.app.version=1.0.0
 
 endpoints.shutdown.enabled=true
 management.endpoint.shutdown.enabled=true
+
+spring.sleuth.sampler.percentage=1
+spring.zipkin.baseUrl=http://localhost:9411/
+
+##########IF THERE IS NEED TO PUSH LOG MESSAGES TO RABBITMQ FOR ASYNCHRONOUS PURPOSE##########
+#spring.zipkin.sender.type=rabbit
+#spring.zipkin.rabbitmq.queue=zipkin
+#spring.rabbitmq.host=localhost
+#spring.rabbitmq.port=5672
+#spring.rabbitmq.username=guest
+#spring.rabbitmq.password=guest
