--- a/configserver/configserver/pom.xml
+++ b/configserver/configserver/pom.xml
@@ -32,6 +32,27 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+
+		<!--dependency for distributed tracing - add App name, Trace ID, Span ID to logger-->
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-sleuth</artifactId>
+		</dependency>
+
+
+		<!--sleuth distributed logs monitoring system-->
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-sleuth-zipkin</artifactId>
+		</dependency>
+
+		<!--rabbitmq for pushing logs to zipkin-->
+<!--		<dependency>-->
+<!--			<groupId>org.springframework.amqp</groupId>-->
+<!--			<artifactId>spring-rabbit</artifactId>-->
+<!--		</dependency>-->
+
+
 	</dependencies>
 	<dependencyManagement>
 		<dependencies>
@@ -52,7 +73,7 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 				<configuration>
 					<image>
-						<name>bankapplication/${project.artifactId}</name>
+						<name>darshm/bankapplication:${project.artifactId}</name>
 					</image>
 				</configuration>
 			</plugin>
