--- a/configserver/configserver/src/main/resources/application.properties
+++ b/configserver/configserver/src/main/resources/application.properties
@@ -16,3 +16,14 @@ spring.cloud.config.server.git.default-label=main
 server.port=8071
 
 encrypt.key=darshan
+
+spring.sleuth.sampler.percentage=1
+spring.zipkin.baseUrl=http://localhost:9411/
+
+##########IF THERE IS NEED TO PUSH LOG MESSAGES TO RABBITMQ FOR ASYNCHRONOUS PURPOSE##########
+#spring.zipkin.sender.type=rabbit
+#spring.zipkin.rabbitmq.queue=zipkin
+#spring.rabbitmq.host=localhost
+#spring.rabbitmq.port=5672
+#spring.rabbitmq.username=guest
+#spring.rabbitmq.password=guest
