--- a/eurekaserver/eurekaserver/src/main/resources/application.properties
+++ b/eurekaserver/eurekaserver/src/main/resources/application.properties
@@ -1,3 +1,14 @@
 spring.application.name=eurekaserver
 spring.config.import=optional:configserver:http://localhost:8071
 spring.cloud.loadbalancer.ribbon.enabled=false
+
+spring.sleuth.sampler.percentage=1
+spring.zipkin.baseUrl=http://localhost:9411/
+
+##########IF THERE IS NEED TO PUSH LOG MESSAGES TO RABBITMQ FOR ASYNCHRONOUS PURPOSE##########
+#spring.zipkin.sender.type=rabbit
+#spring.zipkin.rabbitmq.queue=zipkin
+#spring.rabbitmq.host=localhost
+#spring.rabbitmq.port=5672
+#spring.rabbitmq.username=guest
+#spring.rabbitmq.password=guest
