--- a/gatewayserver/src/main/resources/application.properties
+++ b/gatewayserver/src/main/resources/application.properties
@@ -9,7 +9,19 @@ info.app.name=Gateway Server Microservice
 info.app.description=Demo Bank Gateway Server Application
 info.app.version=1.0.0
 
+#spring.main.allow-bean-definition-overriding=true
+
 spring.cloud.gateway.discovery.locator.enabled=true
 spring.cloud.gateway.discovery.locator.lowerCaseServiceId=true
 
 logging.level.com.example.gatewayserver: DEBUG
+
+spring.sleuth.sampler.percentage=1
+spring.zipkin.baseUrl=http://localhost:9411/
+
+#spring.zipkin.sender.type=rabbit
+#spring.zipkin.rabbitmq.queue=zipkin
+#spring.rabbitmq.host=localhost
+#spring.rabbitmq.port=5672
+#spring.rabbitmq.username=guest
+#spring.rabbitmq.password=guest
